# High-Performance-Control

./: .gitignore  Install_Linux.sh  Install_Windows.bat  LICENSE  README.md
Install_Files/: CMake_ReplaceFile  GenerateDocumentation.bat  GenerateDocumentation.sh  Install_c3.sh  Install_c3sc.sh  Install_cdyn.sh  Install_hpc.sh  Linux_replacement.sh
hpc/: .gitignore  CMakeLists.txt
hpc/Matlab_Files/: LQR_1D_Script.m  MAIN_Compare1DMethods.m  MCM_1D_Solver.m  TESTING.m
hpc/Project_C++_Files/: .gitignore  CMakeLists.txt  DotMatCreator.h  EulerMethod.cpp  EulerMethod.h  EulerParameters.cpp  EulerParameters.h  EulersMethod.cpp  EulersMethod.h  EulersMethod1D.cpp  EulersMethod1D.h  Functions.cpp  Functions.h  Functions2.cpp  Functions2.h  MarkovChainApproximation.cpp  MarkovChainApproximation.h  MarkovChainApproximation1D.cpp  MarkovChainApproximation2.cpp  MarkovChainApproximation2.h  MarkovChainApproximationX.cpp  MarkovChainApproximationX.h  MarkovChainParameters.cpp  MarkovChainParameters.h  OneDimensionPlus_Script.cpp  OneDimension_Script.cpp  viewplots.gla
hpc/Project_C++_Files/documentation/: DoxyConfig
hpc/Project_C++_Files/examples/DubinsCar/: DubinsCar_Example.cpp
hpc/Project_C++_Files/examples/mca/: Functions2.cpp  Functions2.h  OneDimensionPlus_Script.cpp  viewplots.gla
hpc/Project_C++_Files/examples/mca_1Donly/: Functions.cpp  Functions.h  OneDimension_Script.cpp  viewplots.gla
hpc/Project_C++_Files/src/eulersmethod/: EulersMethod.cpp  EulersMethod.h
hpc/Project_C++_Files/src/eulersmethod_1Donly/: EulersMethod1D.h
hpc/Project_C++_Files/src/mca/: MarkovChainApproximation.cpp  MarkovChainApproximation.h  MarkovChainParameters.cpp  MarkovChainParameters.h
hpc/Project_C++_Files/src/mca_1Donly/: MarkovChainApproximation1D.cpp  MarkovChainApproximation1D.h
hpc/Project_C++_Files/src/multidim/: GridIndex.cpp  GridIndex.h  GridParameters.cpp  GridParameters.h
hpc/documentation/: DoxyConfig
hpc/examples/DubinsCar/: DubinsCar_Example.cpp
hpc/examples/dubinscar/: dubinscar.cpp  dubinscar.h
hpc/examples/mca/: Functions2.cpp  OneDimensionPlus_Script.cpp  viewplots.gla
hpc/examples/onedimensional/: OneDimensionPlus_Script.cpp  OneDimensionPlus_Script.h  OneDimension_Functions.cpp  OneDimension_Functions.h  viewplots.bat  windowsGnu.p
hpc/examples/onedimensional_OLD/: Functions_OLD.cpp  onedimension_OLD.cpp
hpc/src/eulersmethod/: EulersMethod.cpp  EulersMethod.h
hpc/src/eulersmethod_1Donly/: EulersMethod1D.cpp
hpc/src/main/: main.cpp
hpc/src/matlab_conversion/: DotMatCreator.cpp
hpc/src/mca/: MarkovChainApproximation.cpp  MarkovChainApproximation.h  MarkovChainParameters.cpp
hpc/src/mca_OLD/: MarkovChainApproximation1D.cpp
hpc/src/multidim/: GridIndex.h  GridParameters.cpp  GridParameters.h
hpc/src/utilities/: ProgressBar.h
report/: .gitignore  Report.lof  Report.tex
